# thesis-agent

./: .gitignore  README.md  pyproject.toml
configs/: default_format.json  sdju_format.json
docs/: iteration_001.md  iteration_002.md  iteration_003.md  iteration_004.md  iteration_005.md  iteration_006.md  iteration_007.md  quality_requirements.md
src/thesis_agent/: __init__.py  agent_run.py  annotations.py  citation_style.py  cli.py  config.py  content_enhance.py  content_plan.py  content_repair.py  content_review.py  diagram_repair.py  document_convert.py  document_profile.py  document_requirements.py  docx_inspect.py  format_fix.py  metadata_store.py  ooxml.py  pdf_inspect.py  pipeline.py  quality_gate.py  rebuild.py  reference_style.py  render.py  report_format.py  slot_fill.py  template_checklist.py  template_profile.py  template_rebuild.py  toc_sync.py  tools.py  vision_pack.py  visual_check.py  visual_compare.py  visual_repair.py  web_app.py
tests/: test_smoke.py
